Fixed overflow issues for some containers

--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -9,6 +9,7 @@
      
     #aboutDiv {
         grid-area: 2 / 1 / 3 / 5;
+        overflow: hidden;
     }
 
     .descriptionHeader {
@@ -96,6 +97,7 @@
         height: 110%;
         grid-area: 3 / 3 / 4 / 5;
         align-content: center;
+        overflow: hidden;
 
         > h2 {
             width: 10ch;
@@ -252,7 +254,7 @@ span {
 @media (max-width: 875px) {
     .aboutGrid {
         width: 90%;
-        .latexContainer{ padding-left: 0;}
+        // .latexContainer{ padding-left: 0;}
     }
 }
 @media (max-width: 500px) {
