--- a/src/components/contact/Contact.module.scss
+++ b/src/components/contact/Contact.module.scss
@@ -5,10 +5,11 @@
     height: 100%;
     background: rgb(203, 203, 203);
     border-radius: 6px;
-    padding: 20px 60px 30px 40px;
+    // padding: 20px 60px 30px 40px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     padding-top: 4%;
     padding-bottom: 5%;
+    overflow: hidden;
 
     .content {
         display: flex;
@@ -135,11 +136,12 @@ input:focus {
 
 @media (max-width: 950px) {
     .container {
-        width: 90%;
-        padding: 30px 40px 40px 35px;
+        width: 100%;
+        .content { margin-left: 5%; margin-right: 4%;}
         .content .rightPanel {
             width: 75%;
-            margin-left: 55px;
+            // padding-left: 10%;
+            // // padding-right: 10%;
         }
     }
 }
